# hbrs-youbot-hackathon

./: .gitignore  README  README.md  RoboCupAtWork.rosinstall  repository.rosinstall
others/laptop_battery_monitor/: mainpage.dox  manifest.xml
others/raw_laptop_battery_monitor/: mainpage.dox  manifest.xml
others/raw_youbot_battery_monitor/: CMakeLists.txt  README  manifest.xml
others/tools/: open_terminals.sh
others/udev_rules/: 50-youbot-devices.rules
others/youbot_battery_monitor/: CMakeLists.txt  README  mainpage.dox  run_youbot_battery_monitor.sh  youbot_battery_monitor.sh
others/youbot_battery_tool/: manifest.xml
raw_3rd_party/: stack.xml
raw_3rd_party/cvblobs/: README
raw_behaviors/: stack.xml
raw_behaviors/raw_base_placement_fred/: mainpage.dox  manifest.xml
raw_behaviors/raw_base_placement_matthias_fueller/: .gitignore  mainpage.dox
raw_behaviors/raw_base_placement_nirmal/: manifest.xml
raw_calibration/: stack.xml
raw_common/raw_msgs/: manifest.xml
raw_common/raw_srvs/: manifest.xml
raw_manipulation/: stack.xml
raw_manipulation/baseplacement/: CMakeLists.txt  mainpage.dox  manifest.xml
raw_manipulation/raw_arm_cmds/: mainpage.dox  manifest.xml
raw_manipulation/raw_arm_navigation/: manifest.xml
raw_manipulation/raw_base_placement/: CMakeLists.txt  manifest.xml
raw_manipulation/raw_motion_controller/: CMakeLists.txt  mainpage.dox  manifest.xml
raw_manipulation/raw_relative_movements/: CMakeLists.txt  manifest.xml
raw_navigation/: stack.xml
raw_navigation/raw_2dnav/: CMakeLists.txt  manifest.xml
raw_navigation/raw_2dnav_eband/: mainpage.dox  manifest.xml
raw_navigation/raw_2dnav_iros/: CMakeLists.txt  mainpage.dox  manifest.xml
raw_navigation/raw_2dnav_iros2012/: CMakeLists.txt  mainpage.dox  manifest.xml
raw_navigation/raw_2dnav_omni/: manifest.xml
raw_navigation/raw_base_placement/: .gitignore  CMakeLists.txt
raw_navigation/raw_base_placement_fred/: mainpage.dox  manifest.xml
raw_navigation/raw_base_placement_matthias_fueller/: .gitignore
raw_navigation/raw_base_placement_nirmal/: CMakeLists.txt
raw_navigation/raw_base_placement_to_platform_in_front/: CMakeLists.txt  manifest.xml
raw_navigation/raw_basic_navigation/: CMakeLists.txt  mainpage.dox  manifest.xml
raw_navigation/raw_local_planner/: CMakeLists.txt  blp_plugin.xml
raw_navigation/raw_relative_movements/: manifest.xml
raw_navigation_experimental/: stack.xml
raw_navigation_experimental/raw_2dnav_experimental/: manifest.xml
raw_navigation_experimental/raw_local_planner_omnidirectional/: CMakeLists.txt  Makefile  manifest.xml
raw_object_perception/raw_blob_detection/: CMakeCache.txt  README  manifest.xml
raw_object_perception/raw_door_status/: manifest.xml
raw_object_perception/raw_marker_detection/: manifest.xml
raw_object_perception/raw_object_detection/: manifest.xml
raw_object_perception/raw_object_finder/: CMakeLists.txt  manifest.xml
raw_object_perception/raw_object_recognition/: CMakeLists.txt  mainpage.dox  manifest.xml
raw_object_perception/raw_object_tracking/: CMakeLists.txt  manifest.xml
raw_object_perception/raw_object_tracking/ros/config/: object_finder_params_default.yaml
raw_object_perception/raw_object_tracking/ros/include/: bounding_box.h  bounding_box_object.h  colored_occupancy_octree_object.h  object_tracker.h  occupancy_octree_object.h
raw_object_perception/raw_object_tracking/ros/include/impl/: bounding_box.hpp  object_tracker.hpp
raw_object_perception/raw_object_tracking/ros/launch/: cluster_finder.launch  object_finder.launch  perception.launch  replay_dataset.launch  replay_dataset_slow.launch
raw_object_perception/raw_object_tracking/ros/src/: bounding_box_object.cpp  colored_occupancy_octree_object.cpp  object_tracker.cpp  occupancy_octree_object.cpp
raw_object_perception/raw_object_tracking/ros/src/nodes/: bounding_box_visualizer_node.cpp  cluster_finder_node.cpp  object_candidates_finder_node.cpp  object_finder_node.cpp  object_tracker_node.cpp
raw_object_perception/raw_perception_tests/: CMakeLists.txt  manifest.xml
raw_object_perception/raw_perception_tests/cfg/: OrganizedDominantPlaneExtractorTest.cfg  RansacDominantPlaneExtractorTest.cfg  TabletopClusterExtractorTest.cfg
raw_object_perception/raw_perception_tests/files/: depth_test.pcd  object1.pcd
raw_object_perception/raw_perception_tests/include/: test_base.hpp
raw_object_perception/raw_perception_tests/launch/: online_cluster_finder_test.launch  online_object_finder_test.launch  open_challenge_showoff.launch  replay_dataset.launch  replay_dataset_slow.launch
raw_object_perception/raw_perception_tests/src/: bounding_box_test.cpp  dominant_plane_extractor_test.cpp  online_cluster_finder_test.cpp  online_dominant_plane_extractor_test.cpp  online_object_finder_test.cpp  tabletop_cluster_extractor_test.cpp
raw_object_perception/raw_scene_segmentation/: CMakeLists.txt  manifest.xml  patch.diff
raw_object_perception/raw_visual_servoing/: CMakeLists.txt  manifest.xml
raw_robots/raw_bringup/: manifest.xml
raw_scenarios/: stack.xml
raw_scenarios/raw_basic_manipulation_test_wc2012/: mainpage.dox  manifest.xml
raw_scenarios/raw_basic_navigation_test_wc2012/: manifest.xml
raw_scenarios/raw_fetch_and_carry/: manifest.xml
raw_simulation/raw_bringup_sim/: manifest.xml
raw_simulation/raw_gazebo_worlds/: manifest.xml
raw_utwente_motion_stack/raw_arm_bridge_ros_orocos/: manifest.xml
raw_wholebody_navigation/: stack.xml
(+447 files in other folders)
